# dcmtk-htj2k

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build_wasm.bat  djcodecd.cc  djcodece.cc  djdecode.cc  djencode.cc  djutils.cc
.github/workflows/: ci.yml
cmake/: DCMTKHTJ2KConfig.cmake.in
include/dcmtkhtj2k/: djcodecd.h  djcodece.h  djcparam.h  djdecode.h  djencode.h  djrparam.h  djutils.h  dldefine.h
libsrc/: djcodecd.cc  djcodece.cc  djcparam.cc  djdecode.cc  djencode.cc  djrparam.cc  djutils.cc
patches/: README.md  dcmtk-ofwhere-emscripten.patch
tests/: CMakeLists.txt  test.cc
